--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </div>
 
+    <script src="app/js/config.js"></script>
     <script src="app/js/scripts.js"></script>
 </body>
 </html>
